# uploader_app

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  test_environment.env.asc  test_google_drive_my_auth.json.asc  test_google_play_auth.json.asc  test_google_play_classic_auth.json.asc  test_uploading.sh
.git-crypt/keys/default/0/: 169827F634F6EFC5B866E47B0BD10E4E6E578FB6.gpg
.github/workflows/: rust.yml
env/: test_environment.env  test_environment.env.asc  test_google_drive_my_auth.json  test_google_drive_my_auth.json.asc  test_google_play_auth.json.asc  test_google_play_classic_auth.json.asc  test_google_play_island-tales_auth.json.asc
libs/_any_field_is_some/: Cargo.toml
libs/amazon_client/: .gitignore  Cargo.toml  Makefile  README.md  test_environment.env.asc
libs/amazon_client/env/: test_environment.env
libs/amazon_client/src/: app_edit.rs  client.rs  error.rs  lib.rs  request_builder.rs  responses.rs  token.rs
libs/amazon_client/tests/: integration_test.rs
libs/any_field_is_some_derive/: Cargo.toml
libs/any_field_is_some_derive/src/: lib.rs
libs/any_field_is_some_macro/: Cargo.toml
libs/any_field_is_some_macro/src/: lib.rs
libs/app_center_client/: .gitignore  Cargo.toml  Makefile  README.md  test_environment.env.asc
libs/app_center_client/env/: test_environment.env
libs/app_center_client/examples/: alloc_profile_test.rs
libs/app_center_client/src/: bytes_uploader.rs  client.rs  error.rs  file_stream_uploader.rs  helpers.rs  hyper_uploader.rs  lib.rs  request_builder.rs  responses.rs  uploader.rs
libs/app_center_client/tests/: integration_test.rs
libs/facebook_instant_client/: Cargo.toml  Makefile
libs/facebook_instant_client/env/: .gitignore  test_environment.env
libs/facebook_instant_client/src/: error.rs  json_helpers.rs  lib.rs  production_submission.rs  request_builder.rs  responses.rs  submission_helpers.rs
libs/facebook_instant_client/tests/: integration_test.rs
libs/google_drive_client/: .gitignore  Cargo.toml  Makefile  README.md  test_google_drive_gi_auth.json.asc  test_google_drive_gi_auth_new.json.asc  test_google_drive_gi_auth_old.json.asc  test_google_drive_my_auth.json.asc
libs/google_drive_client/env/: test_google_drive_gi_auth_new.json  test_google_drive_gi_auth_old.json
libs/google_drive_client/src/: client.rs  error.rs  file.rs  folder.rs  helpers.rs  lib.rs  request_builder.rs  responses.rs
libs/google_drive_client/tests/: integration_test.rs
libs/google_play_client/: Cargo.toml  Makefile  README.md  google_play_beta_credentials.json.asc  google_play_classic_credentials.json.asc  test_google_play_auth.json.asc  test_google_play_island-tales_auth.json.asc
libs/google_play_client/env/: .gitattributes  google_play_beta_credentials.json  google_play_classic_credentials.json  test_google_play_auth.json  test_google_play_island-tales_auth.json
libs/google_play_client/src/: app_edit.rs  client.rs  cow_arc.rs  error.rs  lib.rs  request_builder.rs  responses.rs
libs/google_play_client/tests/: integration_test.rs
libs/json_parse_helper/: Cargo.toml
libs/json_parse_helper/src/: lib.rs
libs/microsoft_azure_client/: Cargo.toml  Makefile  README.md  TODO  test_environment.env.asc
libs/microsoft_azure_client/env/: test_environment.env
libs/microsoft_azure_client/src/: _append_uploader.rs  _submission.rs  blob_uploader.rs  client.rs  error.rs  flight_submission.rs  helpers.rs  lib.rs  production_submission.rs  request_builder.rs  responses.rs  submission.rs  submission_helpers.rs  token.rs
libs/microsoft_azure_client/src/token/: mod.rs  provider.rs  provider_impl.rs  provider_trait.rs  token.rs  token_struct.rs
libs/microsoft_azure_client/tests/: integration_test.rs
libs/serde_json_string_parse_helper/: Cargo.toml  Makefile
libs/serde_json_string_parse_helper/src/: lib.rs
libs/serde_json_string_parse_helper/tests/: integration_test.rs
libs/slack_client_lib/: .gitignore  Cargo.toml  Makefile  README.md  test_environment.env.asc
libs/slack_client_lib/src/: client.rs  error.rs  lib.rs  message.rs  tests_helpers.rs  view.rs
libs/slack_client_lib/src/search_by_name/: full_name_search.rs  iter_users_search.rs  mod.rs  user_info.rs
libs/slack_client_lib/src/users_cache/: mod.rs  users_cache_trait.rs  users_in_memory_cache.rs  users_json_cache.rs  users_sqlite_cache.rs
libs/slack_client_lib/tests/: tests.rs
src/: main.rs
src/app_parameters/: mod.rs  subtypes.rs
src/env_parameters/: mod.rs  subtypes.rs
src/result_receivers/: mod.rs  receiver_trait.rs  slack_sender.rs  terminal_sender.rs
src/result_senders/: sender_trait.rs  slack_sender.rs  terminal_sender.rs
src/uploaders/: amazon.rs  app_center.rs  facebook_instant.rs  google_drive.rs  google_play.rs  ios.rs  mod.rs  ssh.rs  ssh_unix.rs  ssh_windows.rs  upload_result.rs  windows_store.rs
