[package]
name = "uploader_app"
version = "0.1.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

[features]
default = []
flame_it = ["flame", "flamer"]

[dependencies]
tokio = {version="0.2.24", features=["full"]} # TODO: Убрать часть фичей https://docs.rs/crate/tokio/0.3.6/features
reqwest = {version="0.10.9", default-features=false, features=["stream", "rustls-tls"]}
lazy_static = "1.4.0"
futures = "0.3.8"
serde_json = "1.0.60"
log = "0.4.11"
pretty_env_logger = "0.4.0"
clap = "2.33.3"
async-trait = "0.1.42"
dirs = "3.0.1"
qrcode = "0.12.0"
image = "0.23.12"
yup-oauth2 = "4.1.3"
ssh2 = "0.9.0"
trust-dns-resolver = "0.20.0"
app_center_client = {path="libs/app_center_client", features=["rustls"]}
google_drive_client = {path="libs/google_drive_client", features=["rustls"]}
google_play_client = {path="libs/google_play_client", features=["rustls"]}
amazon_client = {path="libs/amazon_client", features=["rustls"]}
# microsoft_azure_client = {path="libs/microsoft_azure_client", features=["rustls"]}
any_field_is_some = {path="libs/any_field_is_some"}
flame = {version="0.2.2", optional=true}
flamer = {version="0.4.0", optional=true}

[dependencies.slack_client_lib]
git = "https://github.com/DevNulPavel/slack_client_lib.git"
rev = "581d6a41b185d1b8a5e4f7f30ce1c8671e62c0f9"
features=["rustls"]
# tag="v1.0.2"

[dev-dependencies]
rand = "0.8.0"

# Зависимости будут шарить один файлик .lock в корне + общую сборочную директорию
# https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
members = [
    ".",
    "libs/app_center_client",
    "libs/google_drive_client",
    "libs/google_play_client",
    "libs/amazon_client",
    "libs/any_field_is_some",
    "libs/any_field_is_some_derive"
]