[package]
name = "uploader_app"
version = "1.0.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2021"

# [profile.dev]
# split-debuginfo = "unpacked"

[features]
default = []
flame_it = ["flame", "flamer"]

[dependencies]
tokio = {version = "1", features = ["full"]} # TODO: Убрать часть фичей https://docs.rs/crate/tokio/0.3.6/features
reqwest = {version = "0.11", default-features = false, features = ["stream", "rustls-tls"]}
lazy_static = "1"
futures = "0.3"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
tracing-error = "0.1"
# tracing-appender = "0.1"
clap = "2"                  # TODO: обновиться до версии 3
async-trait = "0.1"
dirs = "4"
qrcode = "0.12"
image = "0.23"   # qrcode библиотека пока что требует именно эту версию
yup-oauth2 = "7"
tap = "1"
chrono = "0.4"
any_field_is_some_macro = {path = "libs/any_field_is_some_macro"}
app_center_client = {path = "libs/app_center_client"}
google_drive_client = {path = "libs/google_drive_client"}
google_play_client = {path = "libs/google_play_client"}
amazon_client = {path = "libs/amazon_client"}
microsoft_azure_client = {path = "libs/microsoft_azure_client"}
facebook_instant_client = {path = "libs/facebook_instant_client"}
json_parse_helper = {path = "libs/json_parse_helper"}
slack_client_lib = {git = "https://github.com/DevNulPavel/slack_client_lib.git", rev = "85c3f17f2a0349914b320083b2be2e4ac74f0919", features = ["rustls"]}
flame = {version = "0.2", optional = true}
flamer = {version = "0.4", optional = true}

[target.'cfg(windows)'.dependencies]
which = "4.2"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
trust-dns-resolver = "0.20"
ssh2 = "0.9"

[dev-dependencies]
rand = "0.8"

# Зависимости будут шарить один файлик .lock в корне + общую сборочную директорию
# https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
members = [
    ".",
    "libs/app_center_client",
    "libs/google_drive_client",
    "libs/google_play_client",
    "libs/amazon_client",
    "libs/microsoft_azure_client",
    "libs/facebook_instant_client",
    "libs/any_field_is_some_macro",
    "libs/json_parse_helper"
]