[package]
name = "amazon_client"
version = "1.0.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2021"

# [features]
# default = ["rustls"]
# rustls = ["reqwest/rustls-tls"]     # Пробрасываем опцию в reqwest
# native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"]}
futures = "0.3"
serde = {version="1", features=["derive"]}
serde_json = "1"
tracing = "0.1"
url = "2"
http = "0.2"
tap = "1"
reqwest_inspect_json = "0.1"
tokio = {version="1", default-features = false, features = ["fs", "io-util", "rt"]}
tokio-util = {version = "0.7", features = ["codec"]}

# TODO: Фичи только во время теста
[dev-dependencies]
tokio = {version="1", default-features = false, features = ["fs", "io-util", "macros", "test-util"]}
env_logger = "0.8"
dirs = "4"