[package]
name = "app_center_client"
version = "1.0.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2021"

# [features]
# default = ["rustls"]
# rustls = ["reqwest/rustls-tls"]     # Пробрасываем опцию в reqwest
# native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = {version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"]}
hyper = "0.14"
hyper-rustls = "0.23"
futures = "0.3"
serde = {version="1", features=["derive"]}
serde_json = "1"
tracing = "0.1"
url = "2"
bytes = "1"
reqwest_inspect_json = "0.1"
tokio = {version="1", default-features = false, features = ["fs", "io-util", "rt"]}
tokio-util = {version = "0.7", features = ["codec"]}

# TODO: Фичи только во время теста
[dev-dependencies]
tokio = {version="1", default-features = false, features = ["fs", "io-util", "macros", "test-util"]}
qrcode = "0.12"
image = "0.23" # QRCode совместима лишь с этой версией
dirs = "4"
tracing-subscriber = "0.2"
tracing-log = "0.1"
tracing-error = "0.1"