[package]
name = "facebook_instant_client"
version = "1.0.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2021"

# [features]
# default = ["rustls"]
# rustls = ["reqwest/rustls-tls"]     # Пробрасываем опцию в reqwest
# native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"]}
tokio = {version="1", default-features = false, features = ["fs", "io-util", "rt"]}
serde = {version="1", features=["derive"]}
serde_json = "1"
tracing = "0.1"
thiserror = "1"
backtrace = "0.3"
# derive_more = "0.99"

# TODO: Фичи только во время теста
[dev-dependencies]
tokio = {version="1", default-features = false, features = ["fs", "io-util", "macros", "test-util"]}
env_logger = "0.9"
