[package]
name = "google_drive_client"
version = "1.0.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2021"

# [features]
# default = ["rustls"]
# rustls = ["reqwest/rustls-tls"]     # Пробрасываем опцию в reqwest
# native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"]}
futures = "0.3"
serde = {version="1", features=["derive"]}
serde_json = "1"
tracing = "0.1"
tracing-error = "0.1"
url = "2"
quick-error = "2"
# thiserror = "1.0"
anyhow = "1"
yup-oauth2 = "7"
mime = "0.3"
mime_guess = "2"
reqwest_inspect_json = "0.1"
tokio = {version="1", default-features = false, features = ["fs", "io-util", "rt"]}
tokio-util = {version = "0.7", features = ["codec"]}
into-result = "0.3"

# TODO: Фичи только во время теста
[dev-dependencies]
tokio = {version="1", default-features = false, features = ["fs", "io-util", "macros"]}
tracing-subscriber = "0.2"
tracing-log = "0.1"
tracing-error = "0.1"