[package]
name = "google_play_client"
version = "1.0.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2021"

# [features]
# default = ["rustls"]
# rustls = ["reqwest/rustls-tls"]     # Пробрасываем опцию в reqwest
# native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"]}
futures = "0.3"
serde = {version="1", features=["derive"]}
serde_json = "1"
log = "0.4"
url = "2"
yup-oauth2 = "7"
cow_arc = "0.2"
quick-error = "2"
tap = "1"
reqwest_inspect_json = "0.1"
tokio = {version="1", default-features = false, features = ["fs", "io-util", "rt"]}
tokio-util = {version = "0.7", features = ["codec"]}
# into-result = "0.3.1"
# mime = "0.3.16"
# mime_guess = "2.0.3"

# TODO: Фичи только во время теста
[dev-dependencies]
tokio = {version="1", default-features = false, features = ["fs", "io-util", "macros", "test-util"]}
env_logger = "0.9"
# dirs = "4"