[package]
name = "microsoft_azure_client"
version = "1.0.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2021"

# [features]
# default = ["rustls"]
# rustls = ["reqwest/rustls-tls"]     # Пробрасываем опцию в reqwest
# native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"]}
tokio = {version="1", default-features = false, features = ["fs", "io-util", "rt"]}
futures = "0.3"
serde = {version="1", features=["derive"]}
serde_json = "1"
tracing = "0.1"
tracing-error = "0.1"
url = "2"
cow_arc = "0.2"
quick-error = "2"
bytes = "1"
zip = "0.5"
humansize = "1"
async-channel = "1"
json_parse_helper = {path = "../json_parse_helper"}

# TODO: Фичи только во время теста
[dev-dependencies]
tokio = {version="1", default-features = false, features = ["fs", "io-util", "macros"]}
tracing-subscriber = "0.2"
tracing-log = "0.1"
tracing-error = "0.1"
# dirs = "4"
# httpmock = "0.5.6" // TODO: Вроде как приводит к конфликту версий hyper + проблеме с broken pipe