[package]
name = "slack_client_lib"
version = "1.1.0"
authors = ["Pavel Ershov <pershov@game-insight.com>"]
edition = "2018"

[features]
default = ["rustls", "sql"]

rustls = ["reqwest/rustls-tls"]     # Пробрасываем опцию в reqwest
native-tls = ["reqwest/native-tls"]
sql = ["sqlx", "tokio/rt-threaded"]

[dependencies]
reqwest = {version = "0.10.9", default-features = false, features = ["json", "rustls-tls"]}
tokio = {version="0.2.24", default-features = false, features = ["fs", "io-util"]}
sqlx = {optional=true, version="0.4.2", default-features = false, features=["runtime-tokio-rustls", "sqlite", "json", "macros"]}
futures = "0.3.8"
serde = {version="1.0.116", features=["derive"]}
serde_json = "1.0.57"
log = "0.4.11"
uuid = { version = "0.8.1", features = ["v4"] }
async-trait = "0.1.42"

[dev-dependencies]
tokio = {version="0.2.24", default-features = false, features = ["macros", "time", "fs", "io-util", "test-util"]}
qrcode = "0.12.0"
image = "0.23.12"
dirs = "3.0.1"
env_logger = "0.8.2"